[package]
name = "pwd_mgr_rs"
version = "0.1.0"
edition = "2021"

[features]
python = ["pyo3"]

[dependencies]
aes = "0.8"
rand = "0.8"
zeroize = { version = "1.6", features = ["zeroize_derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["serde", "v4"] }
argon2 = "0.5"
thiserror = "1.0"  # For better error handling
pyo3 = { version = "0.20", optional = true }

[lib]
crate-type = ["cdylib"]  # Required for Python bindings

[dev-dependencies]
tempfile = "3.3"